[package]
name = "emblem-bet"
version = "0.1.0"
description = "emblem.bet — Provably Fair Dice on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "emblem_bet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token"] }
solana-program = "1.18.0"
hmac = "0.12"
sha2 = "0.10"
